# self-evolving-agent-patterns

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: anti-pattern-report.md  pattern-suggestion.md
.github/workflows/: publish-pypi.yml  test.yml
docs/: _config.yml  agent-framework-comparison.md  agent-memory-learning.md  anti-patterns.md  build-ai-agent-tools.md  cheatsheet.html  claude-agent-sdk-production-patterns.md  claude-api-agent-tutorial.md  context-engineering.md  how-to-build-self-evolving-ai-agent.md  immune-system.md  index.html  robots.txt  sitemap.xml  two-paradigm.md
examples/: claudemd-generator.py  context-builder.py  context-manifest.yaml  immune-pattern.py  minimal_agent.py  self_evolving_loop.py  tool-discovery.py
src/agent_patterns/: __init__.py  cli.py  core.py  tools.py
